# cdx_proxy_cli_v2

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SSOT_KANBAN.yaml  cdx_documentation.html  proxy_debug_report.html  pyproject.toml
.MEMEORY/: BLACK_WHITE.md  OPEN_LOOPS.md  README.md  TATTOOS.md  TIMELINE.md
.flow_run_001/: FLOW_ITERATION_SUGGESTIONS.md  FLOW_SUGGESTIONS_SUMMARY.yaml  PROPOSED_START_CHANGES.md
docs/: CODEX_EXEC_INTEGRATION.md  CODEX_WP_AUTO_PROMPT_HOOK_API.md  CODEX_WP_SUPERVISION.md  HEADLESS_HOOK_ARITHMETIC_TRAIN_REPRO_RU.md  QUICKSTART.md  SIMPLIFICATION_FUSION_REPORT.md  SIMPLIFICATION_KANBAN_SSOT.json  TEST_REPORT.md  auto_heal_roadmap.md  plan_codex_proxy_resilience_and_review_path_hardening.md  plan_codex_wp_floating_window_review_followup.md  plan_codex_wp_floating_window_review_followup_codex.md  plan_codex_wp_floating_window_review_followup_final.md  plan_codex_wp_floating_window_review_followup_final_95_gate.md  plan_codex_wp_floating_window_review_followup_opus.md  plan_codex_wp_floating_window_review_followup_qa_final.md  plan_codex_wp_floating_window_review_followup_qa_final_opus.md  plan_codex_wp_floating_window_review_followup_ready_to_implementation.md  plan_codex_wp_plan_command.md  plan_codex_wp_zellij_post_review_improvements.md  plan_zellij_floating_pair_multisampling_codex.md  plan_zellij_layout_integration.md  plan_zellij_layout_integration_codex.md  plan_zellij_layout_integration_opus.md
scripts/: auto_test_loop.py  migrate_tokens_to_keyring.py  prod_test_single_key.py  prod_test_single_key_auto.py  (+2 more)
(+421 files in other folders)
